<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.HardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/ModeStyle"
            android:text="@string/hardMode" />

        <TextView
            style="@style/Question"
            android:text="@string/question1" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q1_hard" />

        <TextView
            style="@style/ExampleSentence"
            android:text="@string/q1_hard_context" />

        <RadioGroup style="@style/RadioGroupQuiz">

            <RadioButton
                android:id="@+id/hardQ1op1"
                style="@style/RadioButtonQuiz"
                android:text="@string/q1_hard_op1" />

            <RadioButton
                android:id="@+id/hardQ1op2"
                style="@style/RadioButtonQuiz"
                android:text="@string/q1_hard_op2" />

            <RadioButton
                android:id="@+id/hardQ1op3"
                style="@style/RadioButtonQuiz"
                android:text="@string/q1_hard_op3" />

            <RadioButton
                android:id="@+id/hardQ1op4"
                style="@style/RadioButtonQuiz"
                android:text="@string/q1_hard_op4" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/question2" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q2_hard" />

        <TextView
            style="@style/ExampleSentence"
            android:text="@string/q2_hard_context" />

        <RadioGroup style="@style/RadioGroupQuiz">

            <RadioButton
                android:id="@+id/hardQ2op1"
                style="@style/RadioButtonQuiz"
                android:text="@string/q2_hard_op1" />

            <RadioButton
                android:id="@+id/hardQ2op2"
                style="@style/RadioButtonQuiz"
                android:text="@string/q2_hard_op2" />

            <RadioButton
                android:id="@+id/hardQ2op3"
                style="@style/RadioButtonQuiz"
                android:text="@string/q2_hard_op3" />

            <RadioButton
                android:id="@+id/hardQ2op4"
                style="@style/RadioButtonQuiz"
                android:text="@string/q2_hard_op4" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/question3" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q3_hard" />

        <TextView
            style="@style/ExampleSentence"
            android:text="@string/q3_hard_context" />

        <RadioGroup style="@style/RadioGroupQuiz">

            <RadioButton
                android:id="@+id/hardQ3op1"
                style="@style/RadioButtonQuiz"
                android:text="@string/q3_hard_op1" />

            <RadioButton
                android:id="@+id/hardQ3op2"
                style="@style/RadioButtonQuiz"
                android:text="@string/q3_hard_op2" />

            <RadioButton
                android:id="@+id/hardQ3op3"
                style="@style/RadioButtonQuiz"
                android:text="@string/q3_hard_op3" />

            <RadioButton
                android:id="@+id/hardQ3op4"
                style="@style/RadioButtonQuiz"
                android:text="@string/q3_hard_op4" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/question4" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q4_hard" />

        <TextView
            style="@style/ExampleSentence"
            android:text="@string/q4_hard_context" />

        <RadioGroup style="@style/RadioGroupQuiz">

            <RadioButton
                android:id="@+id/hardQ4op1"
                style="@style/RadioButtonQuiz"
                android:text="@string/q4_hard_op1" />

            <RadioButton
                android:id="@+id/hardQ4op2"
                style="@style/RadioButtonQuiz"
                android:text="@string/q4_hard_op2" />

            <RadioButton
                android:id="@+id/hardQ4op3"
                style="@style/RadioButtonQuiz"
                android:text="@string/q4_hard_op3" />

            <RadioButton
                android:id="@+id/hardQ4op4"
                style="@style/RadioButtonQuiz"
                android:text="@string/q4_hard_op4" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/question5" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q5_hard" />

        <CheckBox
            android:id="@+id/hardQ5op1"
            style="@style/CheckBoxQuiz"
            android:text="@string/q5_hard_op1" />

        <CheckBox
            android:id="@+id/hardQ5op2"
            style="@style/CheckBoxQuiz"
            android:text="@string/q5_hard_op2" />

        <CheckBox
            android:id="@+id/hardQ5op3"
            style="@style/CheckBoxQuiz"
            android:text="@string/q5_hard_op3" />

        <CheckBox
            android:id="@+id/hardQ5op4"
            style="@style/CheckBoxQuiz"
            android:text="@string/q5_hard_op4" />

        <TextView
            style="@style/Question"
            android:text="@string/question6" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q6_hard" />

        <CheckBox
            android:id="@+id/hardQ6op1"
            style="@style/CheckBoxQuiz"
            android:text="@string/q6_hard_op1" />

        <CheckBox
            android:id="@+id/hardQ6op2"
            style="@style/CheckBoxQuiz"
            android:text="@string/q6_hard_op2" />

        <CheckBox
            android:id="@+id/hardQ6op3"
            style="@style/CheckBoxQuiz"
            android:text="@string/q6_hard_op3" />

        <CheckBox
            android:id="@+id/hardQ6op4"
            style="@style/CheckBoxQuiz"
            android:text="@string/q6_hard_op4" />

        <TextView
            style="@style/Question"
            android:text="@string/question7" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q7_hard" />

        <CheckBox
            android:id="@+id/hardQ7op1"
            style="@style/CheckBoxQuiz"
            android:text="@string/q7_hard_op1" />

        <CheckBox
            android:id="@+id/hardQ7op2"
            style="@style/CheckBoxQuiz"
            android:text="@string/q7_hard_op2" />

        <CheckBox
            android:id="@+id/hardQ7op3"
            style="@style/CheckBoxQuiz"
            android:text="@string/q7_hard_op3" />

        <CheckBox
            android:id="@+id/hardQ7op4"
            style="@style/CheckBoxQuiz"
            android:text="@string/q7_hard_op4" />

        <TextView
            style="@style/Question"
            android:text="@string/question8" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q8_hard" />

        <CheckBox
            android:id="@+id/hardQ8op1"
            style="@style/CheckBoxQuiz"
            android:text="@string/q8_hard_op1" />

        <CheckBox
            android:id="@+id/hardQ8op2"
            style="@style/CheckBoxQuiz"
            android:text="@string/q8_hard_op2" />

        <CheckBox
            android:id="@+id/hardQ8op3"
            style="@style/CheckBoxQuiz"
            android:text="@string/q8_hard_op3" />

        <CheckBox
            android:id="@+id/hardQ8op4"
            style="@style/CheckBoxQuiz"
            android:text="@string/q8_hard_op4" />

        <TextView
            style="@style/Question"
            android:text="@string/question9" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q9_hard" />

        <TextView
            style="@style/ExampleSentence"
            android:text="@string/q9_hard_context" />

        <EditText
            android:id="@+id/answerQ9"
            style="@style/FullSentence"
            android:hint="@string/hintHard"
            android:inputType="text" />

        <TextView
            style="@style/Question"
            android:text="@string/question10" />

        <TextView
            style="@style/FullSentence"
            android:paddingTop="@dimen/paddingOrMar_L"
            android:text="@string/q10_hard" />

        <TextView
            style="@style/ExampleSentence"
            android:text="@string/q10_hard_context" />

        <EditText
            android:id="@+id/answerQ10"
            style="@style/FullSentence"
            android:hint="@string/hintHard"
            android:inputType="text" />

        <TextView
            android:id="@+id/resultText"
            style="@style/ResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:text="" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingOrMar_L"
            android:layout_marginTop="@dimen/paddingOrMar_L"
            android:background="#FF8F00"
            android:onClick="submitQuiz"
            android:text="@string/submit"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>

